lib/records/RecProcess.cc
@@ -35,8 +35,7 @@
 static bool g_initialized = false;
 static bool g_message_initialized = false;
 static bool g_started = false;
-static ink_cond g_force_req_cond;
-static ink_mutex g_force_req_mutex;
+static EventNotify g_force_req_notify;
 static int g_rec_raw_stat_sync_interval_ms = REC_RAW_STAT_SYNC_INTERVAL_MS;
 static int g_rec_config_update_interval_ms = REC_CONFIG_UPDATE_INTERVAL_MS;
 static int g_rec_remote_sync_interval_ms = REC_REMOTE_SYNC_INTERVAL_MS;
@@ -263,9 +262,9 @@ recv_message_cb__process(RecMessage *msg, RecMessageT msg_type, void *cookie)
 
   if ((err = recv_message_cb(msg, msg_type, cookie)) == REC_ERR_OKAY) {
     if (msg_type == RECG_PULL_ACK) {
-      ink_mutex_acquire(&g_force_req_mutex);
-      ink_cond_signal(&g_force_req_cond);
-      ink_mutex_release(&g_force_req_mutex);
+      g_force_req_notify.lock();
+      g_force_req_notify.signal();
+      g_force_req_notify.unlock();
     }
   }
   return err;
@@ -419,13 +418,11 @@ RecProcessInitMessage(RecModeT mode_type)
     return REC_ERR_FAIL;
   }
 
-  ink_cond_init(&g_force_req_cond);
-  ink_mutex_init(&g_force_req_mutex, NULL);
   if (mode_type == RECM_CLIENT) {
     send_pull_message(RECG_PULL_REQ);
-    ink_mutex_acquire(&g_force_req_mutex);
-    ink_cond_wait(&g_force_req_cond, &g_force_req_mutex);
-    ink_mutex_release(&g_force_req_mutex);
+    g_force_req_notify.lock();
+    g_force_req_notify.wait();
+    g_force_req_notify.unlock();
   }
 
   g_message_initialized = true;
